remove admin page links from top of content

--- a/app/views/content_pages/show.html.erb
+++ b/app/views/content_pages/show.html.erb
@@ -1,14 +1,3 @@
-<% if is_admin? and @content_page.body_for_display.size > 1500 %>
-  <div style="float:right; text-align:right;">
-    <p class="admin_links">
-      <%= link_to 'Edit this Page', edit_content_page_path(@content_page) %> |
-      <%= link_to 'Create a New Page', new_content_page_path %> |
-      <%= link_to 'List of Pages', content_pages_path %> |
-      <%= link_to 'List of Categories', categories_path %>
-    </p>
-  </div>
-<% end %>
-
 <% cache do %>
   <%= render :file => @page_layout_file %>
 <% end %>
@@ -23,7 +12,7 @@
       <% end %>
     </div>
   <% end %>
-  <p class="admin_links">
+  <p class="admin_links" style="clear:both">
     <%= link_to 'Edit this Page', edit_content_page_path(@content_page) %> |
     <%= link_to 'Create a New Page', new_content_page_path %> |
     <%= link_to 'List of Pages', content_pages_path %> |
