add ListEvents function to content pages
fixes #12

--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -15,6 +15,7 @@
         <li>[[ListCategories]] &nbsp; &nbsp; <em>lists all categories</em></li>
         <li>[[ListPagesInCategory Some Kind of Category]] &nbsp; &nbsp;
           <em>list all pages in the category called "Some Kind of Category"</em></li>
+        <li>[[ListEvents (optional event type)]] <em>list current/upcoming events</em></li>
         <li>[[LinkPage Page Name]] &nbsp; &nbsp; <em>links directly to the page specified</em></li>
         <li>[[LinkCategory Some Kind of Category]] &nbsp; &nbsp; <em>links to the category index page</em></li>
         <li>[[TreeCategories]] &nbsp; &nbsp; <em>create a tree-like list of all categories and their pages</em></li>
