add a search box helper to use in layouts

--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -11,6 +11,9 @@
 
       <div class="side_menu">
         <%= side_menu %>
+
+        <hr/>
+        <%= search_box %>
       </div>
       <div class="user_box">
         <%# defaults:
