add root method to category for css class help

--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="span-24 last">
-    <div class="header">
+    <div class="header <%= @content_page and !@content_page.categories.empty? ? "category_#{@content_page.categories.first.root.id}" : '' %> <%= controller.controller_name %>">
       <%= top_menu %>
     </div>
   </div>
