fixed some events views

--- a/app/views/event_calendar/event_revisions/show.html.erb
+++ b/app/views/event_calendar/event_revisions/show.html.erb
@@ -1,8 +1,8 @@
 <p>
   <% if EventCalendar::Event.where(:id => @event_revision.current_revision).count > 0 %>
-  <%= link_to "< Current Version", event_path(@event_revision.current_revision), :class => 'fake_button' %>
+  <%= link_to "< Current Version", event_calendar_event_path(@event_revision.current_revision), :class => 'fake_button' %>
   <% else %>
-  <%= link_to "< Browse Deleted", event_revisions_path, :class => 'fake_button' %>
+  <%= link_to "< Browse Deleted", event_calendar_event_revisions_path, :class => 'fake_button' %>
   <% end %>
 </p>
 
