--- a/app/views/event_calendar/events/_search_form.html.erb
+++ b/app/views/event_calendar/events/_search_form.html.erb
@@ -1,6 +1,6 @@
 <div>
   <strong>Search Events:</strong>
-  <%= form_tag search_events_path, :method => :get, :style => 'display:inline' do %>
+  <%= form_tag search_event_calendar_events_path, :method => :get, :style => 'display:inline' do %>
     <%= text_field_tag 'q', params[:q] %>
     <%= submit_tag 'go', :class => 'fake_button' %><br/>
   <% end %>
