--- a/app/views/event_calendar/events/search.html.erb
+++ b/app/views/event_calendar/events/search.html.erb
@@ -13,6 +13,6 @@
 
 <div style="clear:both;"></div>
 <p>
-  <%= link_to "Back to full list of events", events_path %>
+  <%= link_to "Back to full list of events", event_calendar_events_path %>
 </p>
 
