--- a/app/views/event_calendar/events/edit.html.erb
+++ b/app/views/event_calendar/events/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Editing <%= link_to @event.name, event_path(@event) %> (<em><%= @event.event_type %></em>)</h1>
+<h1>Editing <%= link_to @event.name, event_calendar_event_path(@event) %> (<em><%= @event.event_type %></em>)</h1>
 
 <%= render :partial => "form" if has_authorization?(:update, @event) %>
