--- a/app/views/event_calendar/events/show.html.erb
+++ b/app/views/event_calendar/events/show.html.erb
@@ -1,1 +1,12 @@
 <%= render @event %>
+
+<%= inner_footer("events") %> 
+
+<% if current_user || @event.file_attachments.any? %>
+<div style="clear:both">
+  <%= render :partial => 'file_attachments/plupload_with_listing', :locals => {
+              :files => @event.file_attachments
+  } %>  
+</div>
+<% end %>
+<%= form_for_browse_event_revisions(@event) %>
