--- a/app/views/event_calendar/links/new.html.erb
+++ b/app/views/event_calendar/links/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Adding Link to <%= link_to @event.name, event_path(@event) %></h1>
+<h1>Adding Link to <%= link_to @event.name, event_calendar_event_path(@event) %></h1>
 
 <%= render :partial => "form" if has_authorization?(:update, @link) %>
