--- a/app/views/event_calendar/links/show.html.erb
+++ b/app/views/event_calendar/links/show.html.erb
@@ -1,3 +1,3 @@
-<h1><%= link_to @event.name, event_path(@event) %> Link</h1>
+<h1><%= link_to @event.name, event_calendar_event_path(@event) %> Link</h1>
 
 <%= render @link %>
