fixed views for event_calendar namespacing

--- a/app/views/dashboards/event_calendar.html.erb
+++ b/app/views/dashboards/event_calendar.html.erb
@@ -10,6 +10,6 @@
 
 <div style="clear:both"></div>
 
-<%= render :partial => 'events/list' %>
+<%= render :partial => '/event_calendar/events/list' %>
 
 <div style="clear:both"></div>
