--- a/app/views/event_calendar/event_revisions/_event_revision.html.erb
+++ b/app/views/event_calendar/event_revisions/_event_revision.html.erb
@@ -1,5 +1,5 @@
 <%= tag_for_record :tr, event_revision, :style => 'background-color: #f5c6d7' do %>
-  <td><%= link_to event_revision.name, event_revision_path(event_revision) %></td>
+  <td><%= link_to event_revision.name, event_calendar_event_revision_path(event_revision) %></td>
   <td><%= truncate(event_revision.location, :length => 100) %></td>
   <td><%= truncate(event_revision.description, :length => 100) %></td>
   <td></td>
