--- a/app/views/event_calendar/event_revisions/show.html.erb
+++ b/app/views/event_calendar/event_revisions/show.html.erb
@@ -8,4 +8,4 @@
 
 <p style="float: right;" class="fake_button">Revision <%= @event_revision.revision_number %></p>
 
-<%= render :partial => 'events/event', :object => @event_revision %>
+<%= render :partial => '/event_calendar/events/event', :object => @event_revision %>
