--- a/app/views/event_calendar/events/_event.html.erb
+++ b/app/views/event_calendar/events/_event.html.erb
@@ -1,15 +1,11 @@
-this is the right partial
 <% unless event.nil? %>
 <%= div_for_record(event) do -%>
-<p>hello!</p>
   <p style="float: right;">
     <%= links_to_edit_and_delete_event(event, {}, {:class => 'fake_button'}) if event.current_revision? %>
   </p>
   <h1><%= link_to_events({:no_wrapper => true}, {:link_text => "Events"}) %>: <%= event.name %> (<em><%= event.event_type %></em>)</h1>
   <div style="clear:both"></div>
-  okay now event details partial
-  <%= render :partial => 'event_details', :object => event %>
-  do I ever get here?
+  <%= render :partial => 'event_calendar/events/event_details', :object => event %>
   <%- if event.current_revision? && (event.links.count > 0 || event.file_attachments.count > 0) -%>
   <p><strong>Materials/Resources</strong></p>
   <%- end -%>
