--- a/app/views/event_calendar/links/_links.html.erb
+++ b/app/views/event_calendar/links/_links.html.erb
@@ -1,5 +1,5 @@
 <div id="links" class="links">
-  <%= render @event.links.all %>
+  <%= render :partial => '/event_calendar/links/link', :collection => @event.links.all %>
   <%= link_to_new_link(@event, {:class => 'new'}) %>
-  <%= render :partial => 'event_calendar/links/form' %>
+  <%= render :partial => '/event_calendar/links/form' %>
 </div>
