add option for multilevel menus to cascade visibility

--- a/themes/page_layouts/aux_column_right.html.erb
+++ b/themes/page_layouts/aux_column_right.html.erb
@@ -1,7 +1,7 @@
 <h1><%= page_name %></h1>
 
 <div style="width: 67%; float:left;">
-  <div class="base_page_content">
+  <div class="base_page_content layout_aux_column_right">
     <%= page_body %>
 
     <%= category_links %>
