--- a/app/views/categories/_list.html.erb
+++ b/app/views/categories/_list.html.erb
@@ -2,7 +2,7 @@
   <% categories.each do |category| -%>
     <li id="cat_<%= category.id %>">
       <div class="category_name"><%= category.name %></div>
-      <div class="category_pages"><%= link_to pluralize(category.content_pages.count, 'page'), category %></div>
+      <div class="category_pages"><%= link_to pluralize(category.content_pages.count, 'page'), category_path(category, :no_redirect => 1) %></div>
       <div class="category_edit"><%= link_to 'edit', edit_category_path(category) %></div>
       <div class="category_del"><%= link_to 'delete', category_path(category), :method => :delete %></div>
       <% child_cats = @categories.select { |cat| category.id == cat.parent_id } %>
