--- a/themes/page_layouts/aux_column_left.html.erb
+++ b/themes/page_layouts/aux_column_left.html.erb
@@ -1,3 +1,4 @@
+<!-- <h1><%= main_category %><%= page_name %></h1> --!>
 <h1><%= page_name %></h1>
 
 <div style="width:33%; float:left;">
@@ -7,7 +8,7 @@
 </div>
 
 <div style="width: 67%; float:left;">
-  <div class="base_page_content">
+  <div class="base_page_content layout_aux_column_left">
     <%= page_body %>
 
     <%= category_links %>
