added a topic field to events

--- a/app/views/event_calendar/events/_event_details.html.erb
+++ b/app/views/event_calendar/events/_event_details.html.erb
@@ -1,4 +1,8 @@
 <p class="zoom">
+  <strong>Topic:</strong>
+  <%= event_details.topic %>
+</p>
+<p class="zoom">
   <strong>Date:</strong> <%= event_details.date %>
   <%- if event_details.one_day? -%>
   <br />
