--- a/app/views/event_calendar/events/_details.html.erb
+++ b/app/views/event_calendar/events/_details.html.erb
@@ -1,4 +1,7 @@
 <div class="span-12 last">
+<p>
+  <strong>Topic:</strong> <%= details.topic %>
+</p>
 <%- unless details.one_day? %>
   <%= textilize(details.location) %>
   <%= textilize(details.description) %>
@@ -16,7 +19,7 @@
 -%>
 <div class="span-12 last">
   <h3>Materials/Resources</h3>
-  <%= render details.links.all %>
+  <%= render :partial => '/event_calendar/links/link', :collection => details.links.all %>
   <%= render :partial => 'file_attachments/file_attachment', :collection => details.file_attachments %>
 </div>
 <%- end -%>
