added withevents and withblog options to linking functions

--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -26,7 +26,8 @@
       </ul>
       <div style="padding-left: 25px;">
         Options for List functions <em>(add to end before closing brackets)</em>:
-        WithHome, SortByDate, SortByDateReverse
+        WithHome, WithEvents, WithBlog, 
+        SortByDate, SortByDateReverse
         SortByAlpha, SortByAlphaReverse, Limit=n
       </div>
     </div>
