--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,8 @@
       jQuery(function($) {
         $('a.show_hide_link').attach(ShowHideLink);
         $('a.menu_show_hide_link').attach(ShowHideLink, {my_highlight_class : 'menu_highlight'});
+
+        $('body').bind('click', function() { $('.menu_hidable').hide() });
       });
     </script>
     <%= yield :javascript %>
