--- a/themes/page_layouts/aux_column_left.html.erb
+++ b/themes/page_layouts/aux_column_left.html.erb
@@ -1,4 +1,4 @@
-<!-- <h1><%= main_category %><%= page_name %></h1> --!>
+<!-- <h1><%= main_category %><%= page_name %></h1> -->
 <h1><%= page_name %></h1>
 
 <div style="width:33%; float:left;">
