--- a/app/views/event_calendar/events/_list.html.erb
+++ b/app/views/event_calendar/events/_list.html.erb
@@ -4,3 +4,4 @@
   <h2>Past Events (<em><%= @past_events.count %></em>)</h2>
   <%= render :partial => '/event_calendar/events/list_group', :locals => {:events => @past_events} %>
 </div>
+<div style="clear:both"></div>
