--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -17,6 +17,7 @@
       <div class="user_box">
         <%# defaults:
             user_box :include_line_breaks => true, :include_blog_link => true, 
+                :include_wiki_link => true, :include_forum_link => true,
                 :include_events_link => true, :link_separator => ' | ' %>
         <%= user_box %>
       </div>
