--- a/app/views/event_calendar/links/_form.html.erb
+++ b/app/views/event_calendar/links/_form.html.erb
@@ -12,7 +12,7 @@ end
     <input type="hidden" name="_method" value="<%= method %>">
     <%= form.input :name, :hint => "Your External Resource" %>
     <%= form.input :url, :label => 'URL', :hint => "some.domain.tld or http://some.dom..." %>
-    <%= form.input :description, :hint => 'Statistics, Analysis and News regarding the sudden and unexpected rise in the population of water molecules.' %>
+    <%= form.input :description, :hint => 'Describe the contents of the external resource.' %>
     <%= form.submit %> <input type="reset" class="cancel" value="Cancel">
   <% end %>
 <% end %>
