--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -26,5 +26,8 @@
 <% end %>
 </table>
 
-<br />
-<%= link_to_new_wiki %>
+
+<p>
+  <%= link_to "change wiki list order", sort_wikis_path %> | 
+  <%= link_to_new_wiki %>
+</p>
