--- a/app/views/forums/_form.html.erb
+++ b/app/views/forums/_form.html.erb
@@ -16,6 +16,12 @@
       <td><%= f.text_area :description, :rows => 5, :cols => 80, :style => "height: 100px;" %></td>
     </tr>
     <tr>
+      <td><%= f.label :group_access %>:</td>
+      <td>
+        <%= render :partial => 'group_access' %>
+      </td>
+    </tr>
+    <tr>
       <td></td>
       <td><%= submit_tag @forum.new_record? ? "Make this Forum!" : "Save Changes" %></td>
     </tr>
