--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,3 +1,11 @@
+<% if is_admin? %>
+  <div style="float:right" class="small_text">
+        <%= link_to 'edit details of this forum', edit_forum_path(@forum) %> |
+        <%= link_to 'delete this forum', @forum, :method => :delete,
+              :confirm => 'Are you sure you want to delete this forum and all the messages in it?' %>
+  </div>
+<% end %>
+
 <h1><%= link_to "Forums", forums_path %>: <%= @forum.title %></h1>
 
 <p class="small_text">
