--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -6,6 +6,10 @@
   The management reserves the right to delete any post and possibly disable accounts at its own discretion.
 </p>
 
+<% if @forums.empty? %>
+  <p><em>You do not have access to any forums. Please contact your administrator if you need access.</em></p>
+<% end %>
+
 <table class="forums">
   <% for forum in @forums -%>
     <tr>
@@ -29,7 +33,25 @@
   <% end -%>
 </table>
 
-   
+<h2>Recent Discussions</h2>
+
+<ul class="recent_discussions">
+<% @recent_messages.each do |message_post| %>
+  <li>
+    <div class="subject">
+      <%= link_to message_post.subject, 
+          forum_message_post_path(message_post.forum, message_post) %> by
+      <%= message_post.user.name %>
+      <em>(<%= pluralize message_post.child_posts.count, "reply" %>)</em>
+    </div>
+    <div class="date_and_forum">
+      <em><%= post_time message_post.updated_at %></em>
+      on <%= link_to message_post.forum.name, message_post.forum %> 
+    </div>
+  </li>
+<% end %>
+</ul>
+
 <br />
 
 <% if is_admin? %>
