return 404 on broken asset links

--- a/app/views/errors/routing.html.erb
+++ b/app/views/errors/routing.html.erb
@@ -1,2 +1,8 @@
-<h1>Errors#routing</h1>
-<p>Find me in app/views/errors/routing.html.erb</p>
+<h1>Error: File not Found</h1>
+<p>
+The asset was not found on the server.
+</p>
+
+<p><em>What does this mean?</em></p>
+
+<p>Most likely, someone uploaded an image or a document and created a link to it from within a page, but then later the image or document was deleted, so the link is now broken.</p>
