--- a/app/views/content_pages/new.html.erb
+++ b/app/views/content_pages/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render :partial => 'form'  %>
 
-<p>[<%= link_to 'Back to List of Pages', content_pages_path %>]</p>
+<% content_for :admin_bar do %>
+  <%= link_to 'Back to List of Pages', content_pages_path %>
+<% end %>
