--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -60,15 +60,12 @@
       <%= f.submit 'set' %>
     </p>
   <% end %>
+<% end %>
 
-  <p class="admin_links">
-    <span class="fake_button">
-    <%= link_to 'List of Categories', categories_path %> |
-    <%= link_to 'List of Pages', content_pages_path %> |
-    <%= link_to 'List of Blog Posts', blog_posts_path %> |
-    <%= link_to "Create a New Page in <em>#{@category.name}</em>".html_safe, new_content_page_path(:category_id => @category.id) %>
-    </span>
-  </p>
+<% content_for :admin_bar do %>
+  <%= link_to 'List of Categories', categories_path %> |
+  <%= link_to 'List of Pages', content_pages_path %> |
+  <%= link_to "Create a New Page in <em>#{@category.name}</em>".html_safe, new_content_page_path(:category_id => @category.id) %>
 <% end %>
 
 <script type="text/javascript">
