--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_link_tag 'screen', :media => 'screen, projection' %>
     <% end -%>
     <%= stylesheet_link_tag 'fullcalendar_changes', :media => 'screen, projection' %>
-    <%= stylesheet_link_tag "file_share/plupload/screen", :media => "screen, projection" %>
+    <%= stylesheet_link_tag "plupload/screen", :media => "screen, projection" %>
     
     <%= stylesheet_link_tag 'print', :media => 'print' %>
     
