--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -26,8 +26,7 @@
 </div>
 
 
-<p class="admin_links">
-  <%= link_to 'Site Administration', admin_site_settings_path %>
+<% content_for :admin_bar do %>
   <!-- |
   <%= link_to 'Custom CSS', :controller => :themes, :action => :css_editor %> -->
-</p>
+<% end %>
