--- a/app/views/message_posts/show.html.erb
+++ b/app/views/message_posts/show.html.erb
@@ -35,6 +35,13 @@
 
 
 <p class="small_text">
-  Go to <a href="http://en.gravatar.com/">gravatar.com</a> to upload picture for your signetwork account. By doing so your photo will appear next to your discussion posts.
+  Go to <a href="http://en.gravatar.com/">gravatar.com</a> to upload picture for your account. By doing so your photo will appear next to your discussion posts.
 </p>
+
+
+
+<% content_for :admin_bar do %>
+  <%= link_to 'delete this message thread', forum_message_post_path(@forum, @message_post), :method => :delete,
+              :confirm => 'Are you sure you want to delete this thread and all the messages in it?' %>
+<% end %>
 
