fix forum comments display for regular users

--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -23,6 +23,9 @@
         <li>[[SearchBox]] &nbsp; &nbsp; <em>displays a search form</em></li>
         <li>[[Calendar]] &nbsp; &nbsp; <em>displays a full-sized calendar</em></li>
         <li>[[MiniCalendar]] &nbsp; &nbsp; <em>displays a mini-sized calendar</em></li>
+        <li>[[AllRecentMessagePosts]] &nbsp; &nbsp; <em>displays recent messages from all forums the logged-in user has access to</em></li>
+        <li>[[RecentMessagePosts Forum Title]] &nbsp; &nbsp; <em>displays recent messages from the specified forum</em></li>
+        <li>[[RecentWikiComments]] &nbsp; &nbsp; <em>displays recent updates and comments from all wikis that the logged-in user has access to</em></li>
       </ul>
       <div style="padding-left: 25px;">
         Options for List functions <em>(add to end before closing brackets)</em>:
