--- a/app/views/event_calendar/events/_admin_links.html.erb
+++ b/app/views/event_calendar/events/_admin_links.html.erb
@@ -3,4 +3,7 @@
   <% if @event %>
     | <%= links_to_edit_and_delete_event(@event) if @event.current_revision? %>
   <% end %>
+  |
+  <%= link_to "Manage/Consolidate Event Types", 
+        manage_event_types_event_calendar_events_path %>
 <% end %>
